@@ -19,9 +19,9 @@
 **/
 ?>
 <?php
-class CTextBox extends CInput{
+class CTextBox extends CInput {
 	private $caption;
-	public function __construct($name='textbox', $value='', $size=20, $readonly='no', $maxlength=255){
+	public function __construct($name = 'textbox', $value = '', $size = 20, $readonly = 'no', $maxlength = 255) {
 		parent::__construct('text', $name, $value);
 		$this->setReadonly($readonly);
 		$this->caption = null;
